Basic update on UI

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
           "<all_urls>"
         ],
         "js": [
-          "/content/text-actions.tsx"
+          "/content/text-actions.ts"
         ]
       }
     ]
