--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "description": "Turn long articles into clear insights using Chrome Built-in AI.",
   "author": "cocshishir@gmail.com",
   "icons": {
-    "16": "assets/icon.png",
-    "48": "assets/icon.png",
+    "16": "assets/icon16.png",
+    "48": "assets/icon48.png",
     "128": "assets/icon.png"
   },
   "scripts": {
